deployment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-self-hosted-saas-app
  namespace: example-self-hosted-saas-app
spec:
  selector:
    app: example-self-hosted-saas-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
